--- a/album.html
+++ b/album.html
@@ -1,1 +1,201 @@
+<!doctype html>
+<html lang="vi">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Album Ký Ức — Nhiều Chủ Đề</title>
+  <style>
+    :root{--paper:#f6eee2;--accent:#b86b66;--muted:#f7d6dc;--text:#4a2b2a}
+    *{box-sizing:border-box}
+    body{margin:0;padding:0;font-family:Inter, system-ui, Arial, sans-serif;background:var(--paper);color:var(--text);min-height:100vh;display:flex;flex-direction:column;align-items:center}
 
+    .container{width:100%;max-width:980px;margin:28px;padding:20px;border-radius:14px;background:linear-gradient(180deg, rgba(255,250,244,0.95), rgba(246,238,226,0.95));box-shadow:0 14px 40px rgba(74,43,42,0.08);position:relative}
+    h1{margin:0 0 6px 0;font-size:1.25rem;text-align:center}
+    p.lead{margin:6px 0 18px 0;text-align:center;color:rgba(74,43,42,0.7)}
+
+    header{display:flex;justify-content:space-between;align-items:center;gap:12px}
+    #musicButton{background:var(--accent);border:none;color:white;padding:8px 12px;border-radius:999px;cursor:pointer;font-weight:700}
+
+    /* list style vertical */
+    .topics{display:flex;flex-direction:column;gap:14px;margin-top:12px}
+    .topic{display:flex;gap:14px;align-items:center;padding:14px;border-radius:12px;background:rgba(255,255,255,0.7);cursor:pointer;border:1px solid rgba(74,43,42,0.04);box-shadow:0 8px 18px rgba(74,43,42,0.04);transition:transform 220ms,box-shadow 220ms}
+    .topic:hover{transform:translateY(-6px);box-shadow:0 18px 40px rgba(74,43,42,0.08)}
+    .topic .thumb{width:120px;height:90px;background-size:cover;background-position:center;border-radius:8px;flex-shrink:0;border:8px solid #fff;box-shadow:0 8px 18px rgba(74,43,42,0.04)}
+    .topic .info{flex:1}
+    .topic h3{margin:0;font-size:1.05rem}
+    .topic p{margin:6px 0 0 0;color:rgba(74,43,42,0.6)}
+
+    /* album overlay */
+    .overlay{position:fixed;inset:0;background:linear-gradient(rgba(10,6,6,0.55), rgba(10,6,6,0.55));display:none;align-items:center;justify-content:center;padding:20px;z-index:9999}
+    .album{width:100%;max-width:840px;background:linear-gradient(180deg,#fff,#fffaf6);border-radius:12px;padding:18px;box-shadow:0 30px 60px rgba(0,0,0,0.45);position:relative}
+    .album .topbar{display:flex;justify-content:space-between;align-items:center;gap:12px}
+    .album h2{margin:0;font-size:1.1rem}
+    .backBtn{background:var(--muted);border:none;padding:8px 12px;border-radius:10px;cursor:pointer}
+
+    .slideshow{position:relative;height:520px;margin-top:12px;display:flex;align-items:center;justify-content:center;overflow:hidden}
+    .slide{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;opacity:0;transition:opacity 1s ease-in-out}
+    .slide.show{opacity:1}
+
+    /* polaroid look inside slide */
+    .polaroid{width:70%;max-width:640px;background:#fff;border-radius:10px;padding:16px;padding-bottom:28px;box-shadow:0 20px 40px rgba(74,43,42,0.12);display:flex;flex-direction:column;align-items:center}
+    .polaroid .photo{width:100%;height:360px;background-size:cover;background-position:center;border-radius:6px}
+    .polaroid .caption{margin-top:12px;color:var(--text);text-align:center}
+
+    /* controls */
+    .controls{display:flex;gap:8px;justify-content:center;margin-top:12px}
+    .controls button{background:var(--accent);color:white;border:none;padding:8px 12px;border-radius:8px;cursor:pointer}
+
+    /* hearts */
+    .heart{position:fixed;pointer-events:none;font-size:20px;animation:floatUp 5s linear infinite}
+    @keyframes floatUp{0%{transform:translateY(0) rotate(0) scale(1);opacity:1}100%{transform:translateY(-700px) rotate(120deg) scale(1.6);opacity:0}}
+
+    footer{margin-top:16px;text-align:center;color:rgba(74,43,42,0.6)}
+
+    @media (max-width:900px){.polaroid{width:92%}.slide{position:relative;height:auto}.slideshow{height:420px}.topic .thumb{width:100px;height:70px}}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <div>
+        <h1>Những Ký Ức Của Chúng Mình 💞</h1>
+        <p class="lead">Chọn một chủ đề để xem lại — lật từng ký ức nhẹ nhàng như quyển album.</p>
+      </div>
+      <div>
+        <button id="musicButton">Bấm để bắt đầu nhạc 🎵</button>
+      </div>
+    </header>
+
+    <section class="topics" id="topics">
+      <!-- topics injected here -->
+    </section>
+
+    <footer>Gửi bởi: Anh luôn nhớ em • ❤️</footer>
+  </div>
+
+  <!-- Album overlay -->
+  <div class="overlay" id="overlay">
+    <div class="album" role="dialog" aria-modal="true">
+      <div class="topbar">
+        <h2 id="albumTitle">Album</h2>
+        <div>
+          <button class="backBtn" id="backBtn">🔙 Quay lại</button>
+        </div>
+      </div>
+
+      <div class="slideshow" id="slideshow">
+        <!-- slides injected -->
+      </div>
+
+      <div class="controls">
+        <button id="prev">‹ Trước</button>
+        <button id="pause">Tạm dừng</button>
+        <button id="next">Sau ›</button>
+      </div>
+    </div>
+  </div>
+
+  <audio id="bgMusic" loop preload="auto"><source src="https://files.catbox.moe/diyvx1.mp3" type="audio/mpeg"></audio>
+
+  <script>
+    // Demo topics + ảnh (bạn sẽ dễ dàng thay bằng link ảnh thật sau)
+    const topicsData = [
+      { id: 't1', title: 'Kỷ niệm bên nhau', desc: 'Những khoảnh khắc ấm áp', images: [
+        'https://picsum.photos/seed/km1/1200/900', 'https://picsum.photos/seed/km2/1200/900', 'https://picsum.photos/seed/km3/1200/900', 'https://picsum.photos/seed/km4/1200/900'
+      ]},
+      { id: 't2', title: 'Những chuyến đi', desc: 'Cùng nhau đi khắp nơi', images: [
+        'https://picsum.photos/seed/ct1/1200/900','https://picsum.photos/seed/ct2/1200/900','https://picsum.photos/seed/ct3/1200/900','https://picsum.photos/seed/ct4/1200/900'
+      ]},
+      { id: 't3', title: 'Sinh nhật & bất ngờ', desc: 'Những ngày đặc biệt', images: [
+        'https://picsum.photos/seed/sb1/1200/900','https://picsum.photos/seed/sb2/1200/900','https://picsum.photos/seed/sb3/1200/900','https://picsum.photos/seed/sb4/1200/900'
+      ]},
+      { id: 't4', title: 'Khoảnh khắc dễ thương của em', desc: 'Những nụ cười làm anh tan chảy', images: [
+        'https://picsum.photos/seed/dt1/1200/900','https://picsum.photos/seed/dt2/1200/900','https://picsum.photos/seed/dt3/1200/900','https://picsum.photos/seed/dt4/1200/900'
+      ]},
+      { id: 't5', title: 'Những dòng nhắn gửi', desc: 'Lời muốn nói mà chưa kịp', images: [
+        'https://picsum.photos/seed/ln1/1200/900','https://picsum.photos/seed/ln2/1200/900','https://picsum.photos/seed/ln3/1200/900','https://picsum.photos/seed/ln4/1200/900'
+      ]}
+    ];
+
+    const topicsEl = document.getElementById('topics');
+    const overlay = document.getElementById('overlay');
+    const slideshow = document.getElementById('slideshow');
+    const albumTitle = document.getElementById('albumTitle');
+    const backBtn = document.getElementById('backBtn');
+    const prevBtn = document.getElementById('prev');
+    const nextBtn = document.getElementById('next');
+    const pauseBtn = document.getElementById('pause');
+    const bgMusic = document.getElementById('bgMusic');
+    const musicButton = document.getElementById('musicButton');
+
+    // hearts
+    function createHeart(){ const el=document.createElement('div');el.className='heart';el.style.left=Math.random()*100+'vw';el.style.fontSize=(14+Math.random()*36)+'px';el.style.color='rgba(184,107,102,0.95)';el.innerText='❤️';document.body.appendChild(el);setTimeout(()=>el.remove(),5200); }
+    let heartInterval; function startHearts(){heartInterval = setInterval(createHeart,700);} function stopHearts(){clearInterval(heartInterval);} 
+
+    // build topic list (vertical)
+    function buildTopics(){ topicsEl.innerHTML=''; topicsData.forEach(t=>{
+      const el = document.createElement('div'); el.className='topic'; el.dataset.id = t.id;
+      el.innerHTML = `<div class="thumb" style="background-image:url('${t.images[0]}')"></div><div class="info"><h3>${t.title}</h3><p>${t.desc}</p></div>`;
+      topicsEl.appendChild(el);
+    }); }
+
+    buildTopics();
+
+    // slideshow logic
+    let currentTopic = null; let slides = []; let currentIndex = 0; let slideInterval = null; let playing = true; const intervalMs = 3000; // 3s per your request
+
+    function openAlbum(topicId){
+      const topic = topicsData.find(x=>x.id===topicId);
+      if(!topic) return;
+      currentTopic = topic; albumTitle.textContent = topic.title; slideshow.innerHTML=''; slides = [];
+      // create slide nodes
+      topic.images.forEach((src, i)=>{
+        const s = document.createElement('div'); s.className='slide'; s.dataset.index = i;
+        s.innerHTML = `<div class="polaroid"><div class="photo" style="background-image:url('${src}')"></div><div class="caption">${topic.title} — Ảnh ${i+1}</div></div>`;
+        slideshow.appendChild(s); slides.push(s);
+      });
+      overlay.style.display='flex'; currentIndex = 0; showSlide(0);
+      // start auto play
+      playing = true; pauseBtn.textContent='Tạm dừng'; startAuto();
+    }
+
+    function showSlide(i){ slides.forEach((s,idx)=> s.classList.toggle('show', idx===i)); }
+
+    function nextSlide(){ currentIndex = (currentIndex+1) % slides.length; showSlide(currentIndex); }
+    function prevSlide(){ currentIndex = (currentIndex-1 + slides.length) % slides.length; showSlide(currentIndex); }
+
+    function startAuto(){ stopAuto(); slideInterval = setInterval(()=>{ nextSlide(); }, intervalMs); }
+    function stopAuto(){ if(slideInterval) clearInterval(slideInterval); }
+
+    // events
+    topicsEl.addEventListener('click', e=>{ const t = e.target.closest('.topic'); if(!t) return; openAlbum(t.dataset.id); startHearts(); try{ bgMusic.play(); }catch(e){} });
+    backBtn.addEventListener('click', ()=>{ overlay.style.display='none'; stopAuto(); stopHearts(); });
+    nextBtn.addEventListener('click', ()=>{ nextSlide(); });
+    prevBtn.addEventListener('click', ()=>{ prevSlide(); });
+    pauseBtn.addEventListener('click', ()=>{ if(playing){ stopAuto(); playing=false; pauseBtn.textContent='Phát lại'; } else { startAuto(); playing=true; pauseBtn.textContent='Tạm dừng'; } });
+
+    // overlay click outside album closes
+    overlay.addEventListener('click', e=>{ if(e.target === overlay){ overlay.style.display='none'; stopAuto(); stopHearts(); } });
+
+    // music start button
+    musicButton.addEventListener('click', async ()=>{ try{ await bgMusic.play(); }catch(e){} musicButton.style.display='none'; startHearts(); });
+
+    // keyboard control (left/right/esc)
+    document.addEventListener('keydown', e=>{
+      if(overlay.style.display==='flex'){
+        if(e.key==='ArrowRight') nextSlide();
+        if(e.key==='ArrowLeft') prevSlide();
+        if(e.key==='Escape') { overlay.style.display='none'; stopAuto(); stopHearts(); }
+      }
+    });
+
+    // accessibility: expose a global function to replace topic images easily
+    window.updateTopicImages = function(topicId, newImages){
+      const t = topicsData.find(x=>x.id===topicId); if(!t) return; t.images = newImages; buildTopics();
+    }
+
+    // initial: you can call updateTopicImages('t1',['link1','link2']) to change later
+
+  </script>
+</body>
+</html>
