--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Gửi Bột 💌</title>
   <style>
 body {
-  background-image: url('images/paper-bg.jpg');
+  background-image: url('images/vintage.jpg');
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   font-family: 'Dancing Script', cursive;
-  color: #3a2e2e;
-  background-color: #fefcf8;
+  color: #5a4632;
+  min-height: 100vh;
 }
 
     #letter {
