--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Gửi Bột 💌</title>
   <style>
 body {
-  background-image: url('myhanh1/images/vintage2.jpg');
+  background-image: url('images/vintage2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
